syntax = "proto3";
package side.btcbridge;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/sideprotocol/side/x/btcbridge/types";

// Params defines the parameters for the module.
message Params {
  // The minimum number of confirmations required for a block to be accepted
  int32 confirmations = 1;
  // Indicates the maximum depth or distance from the latest block up to which transactions are considered for acceptance.
  uint64 max_acceptable_block_depth = 2;
  // The denomination of the voucher
  string btc_voucher_denom = 3;
  // Indicates if deposit is enabled
  bool deposit_enabled = 4;
  // Indicates if withdrawal is enabled
  bool withdraw_enabled = 5;
  // Authorized relayers for non-btc asset deposit
  repeated string non_btc_relayers = 6;
  // Asset vaults
  repeated Vault vaults = 7;
  // Protocol limitations
  ProtocolLimits protocol_limits = 8 [(gogoproto.nullable) = false];
  // Protocol fees
  ProtocolFees protocol_fees = 9 [(gogoproto.nullable) = false];
  // TSS params
  TSSParams tss_params = 10 [(gogoproto.nullable) = false];
}

// AssetType defines the type of asset
enum AssetType {
  // Unspecified asset type
  ASSET_TYPE_UNSPECIFIED = 0;
  // BTC
  ASSET_TYPE_BTC = 1;
  // BRC20: ordi, sats
  ASSET_TYPE_BRC20 = 2;
  // RUNE: dog•go•to•the•moon
  ASSET_TYPE_RUNES = 3;
}

// Vault defines the asset vault
message Vault {
  // the vault address for deposit
  string address = 1;
  // public key of the vault
  string pub_key = 2;
  // the asset type supported by the vault
  AssetType asset_type = 3;
  // version
  uint64 version = 4;
}

// ProtocolLimits defines the params related to the the protocol limitations
message ProtocolLimits {
  // The minimum deposit amount for btc in sat
  int64 btc_min_deposit = 1;
  // The minimum withdrawal amount for btc in sat
  int64 btc_min_withdraw = 2;
  // The maximum withdrawal amount for btc in sat
  int64 btc_max_withdraw = 3;
}

// ProtocolFees defines the params related to the protocol fees
message ProtocolFees {
  // Protocol fee amount for deposit in sat
  int64 deposit_fee = 1;
  // Protocol fee amount for withdrawal in sat
  int64 withdraw_fee = 2;
  // Protocol fee collector
  string collector = 3;
}

// TSSParams defines the params related to TSS
message TSSParams {
  // Timeout duration for DKG request
  google.protobuf.Duration dkg_timeout_period = 1 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];
  // Transition period after which TSS participants update process is completed
  google.protobuf.Duration participant_update_transition_period = 2 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];
}
