syntax = "proto3";
package side.lending;

import "gogoproto/gogo.proto";

option go_package = "github.com/sideprotocol/side/x/lending/types";


// Params defines the parameters for the module.
message Params {

    int64 supply_rate_permille = 1;
    int64 borrow_rate_permille = 2;
    string fee_recipient = 3;
    repeated string pool_creators = 4;
    int64 max_ltv_percent = 5;
    int64 liquidation_threshold_percent = 6; 
}
